[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

# --- 开启工业级工作区模式 (Rust Workspace) ---
# 所有的子项目（内核态、共享库等）都归属于同一个工作区管理。
# 这样做的好处是：cargo 在编译时能清晰划分 scope，彻底解决重名包歧义。
[workspace]
members = [
    "rust-proxy-ebpf",
    "rust-proxy-common",
]

[dependencies]
# --- 核心异步运行时 (Core Runtime) ---
# monoio: 这是极致性能的关键。它基于 io_uring 构建，采用了 Thread-per-core 架构，
# 避免了传统模型中的 CPU 上下文切换和跨线程同步开销。
# 我们选择它是因为我们需要“暴力提速”。
monoio = { version = "0.2.4", features = ["utils", "macros"] }

# --- 日志与观测 (Logging & Observability) ---
# tracing: 现代 Rust 异步日志的首选，支持结构化日志。
# 它能让我们追踪每一个连接的生命周期，非常适合调试高性能网络应用。
tracing = "0.1"
# tracing-subscriber: 用于将追踪数据输出到标准输出 (stdout)，支持彩色显示和过滤。
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- 协议解析与安全性 (Protocol & Security) ---
# tls-parser: 工业级、零拷贝的 TLS 解析库。
# 相比手动解析，它能更安全地处理各种 TLS 扩展，规避缓冲区攻击。
tls-parser = "0.12"

# --- 底层控制与调优 (Networking Base) ---
# socket2: Rust 社区最流行的底层 Socket 控制库，用于物理层调优。
socket2 = { version = "0.5", features = ["all"] }

# --- 序列化与配置 (Serialization & Config) ---
# serde: Rust 社区的事实标准，用于将配置文件、协议报文转换为 Rust 结构体。
serde = { version = "1.0", features = ["derive"] }
# serde_json: 处理 JSON 配置，方便与前端或外部 API 交互。
serde_json = "1.0"
# json_comments: 允许配置文件包含注释（如 config.jsonc），提升用户体验。
json_comments = "0.2"

# --- eBPF 加速框架 (Aya-rs) ---
# aya: 纯 Rust 实现的 eBPF 加密/加载库，它是我们实现“零上下文切换转发”的钥匙。
# 🔥 语法纠偏：Aya 0.13 使用的是 async_tokio (下划线)，而非连字符。
aya = { version = "0.13", features = ["async_tokio"] }
# aya-log: 允许我们在用户态实时看到 eBPF 在内核中打印的 debug 信息。
aya-log = "0.2"

# --- 全局性能优化配置 (Workspace Profile) ---
# 在工作区模式下，所有的优化参数必须在根目录统一配置。
[profile.release]
lto = true          # 开启全量链接时优化，消除跨模块调用开销。
panic = "abort"     # 发生异常时直接退出，不进行复杂的堆栈展开，减小体积。
opt-level = 3       # 开启最高级别的暴力优化，榨干 CPU 每一丝性能。
codegen-units = 1   # 强制单线程代码生成，虽然编译慢，但生成的机器码运行最快。
strip = "debuginfo" # 移除调试信息，让生成的二进制包更纯净。

# --- 错误处理与工具 ---
# libc: Rust 官方推出的底层 C 接口绑定。
# 我们需要它来执行一些 Linux 原生的系统调用（如 setsockopt 的特定标志位），实现“暴力提速”。
libc = "0.2"
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
